--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@*@model AEDFirst.Models.GestionnaireViewModel*@
+
+@{
+    ViewBag.Title = "Gestionnaire de documents";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
         <div class="chat-wrapper d-lg-flex gap-1 mx-n4 mt-n4 p-1">
@@ -298,7 +300,7 @@
                     </div>
                 </div>
             </div>
-            <div class="file-manager-detail-content p-3 py-0">
+            @*<div class="file-manager-detail-content p-3 py-0">
                 <div class="mx-n3 pt-3 px-3 file-detail-content-scroll" data-simplebar>
                     <div id="folder-overview">
                         <div class="d-flex align-items-center pb-3 border-bottom border-bottom-dashed">
@@ -473,7 +475,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>*@
         </div>
 
     <!-- container-fluid -->
