--- a/Views/Document/AddDoc.cshtml
+++ b/Views/Document/AddDoc.cshtml
@@ -5,6 +5,8 @@
     ViewBag.Name = "Documents";
     ViewBag.Description = "Ajout";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var Dossiers = ViewBag.Dossiers;
+    var CateDossiers = ViewBag.CateDossiers;
 }
 
 
@@ -98,101 +100,103 @@
 
                                 <div class="col-lg-12">
                                     <label for="file" class="form-label">Sélectionnez le fichier</label>
-                                    <input type="file" name="DocFile" id="DocFile" class="form-control" required/>
+                                    <input type="file" name="DocFile" id="DocFile" class="form-control" required />
                                 </div>
                                 <!--end col-->
 
                                 <div class="col-lg-12">
                                     @Html.LabelFor(model => model.Titre, htmlAttributes: new { @class = "form-label" })
-                                    @Html.EditorFor(model => model.Titre, new { htmlAttributes = new { @class = "form-control", placeholder = "Entrer le titre du document", required = "required"} })
+                                    @Html.EditorFor(model => model.Titre, new { htmlAttributes = new { @class = "form-control", placeholder = "Entrer le titre du document", required = "required" } })
                                     @Html.ValidationMessageFor(model => model.Titre, "", new { @class = "text-danger" })
                                 </div><!--end col-->
 
-                                <div class="col-lg-6">
-                                    @Html.LabelFor(model => model.Format, htmlAttributes: new { @class = "form-label" })
-                                    @Html.EditorFor(model => model.Format, new { htmlAttributes = new { @class = "form-control", @placeholder = "PDF, JPG, MP4, ...", required = "required" } })
-                                    @Html.ValidationMessageFor(model => model.Format, "", new { @class = "text-danger" })
-                                </div><!--end col-->
+                                @Html.HiddenFor(model => model.Format, new { htmlAttributes = new { @class = "form-control", @placeholder = "PDF, JPG, MP4, ...", required = "required" } })
 
-                                <div class="col-lg-6">
-                                    @Html.LabelFor(model => model.Taille, htmlAttributes: new { @class = "form-label" })
-                                    @Html.EditorFor(model => model.Taille, new { htmlAttributes = new { @class = "form-control", @placeholder = "Taille", required = "required" } })
-                                    @Html.ValidationMessageFor(model => model.Taille, "", new { @class = "text-danger" })
-                                </div><!--end col-->
+                                @Html.HiddenFor(model => model.Taille, new { htmlAttributes = new { @class = "form-control", @placeholder = "Taille", required = "required" } })
 
-                                <div class="col-lg-6">
-                                    @Html.LabelFor(model => model.NomAuteur, htmlAttributes: new { @class = "form-label" })
-                                    @Html.EditorFor(model => model.NomAuteur, new { htmlAttributes = new { @class = "form-control", @placeholder = "Créateur du document", required = "required" } })
-                                    @Html.ValidationMessageFor(model => model.NomAuteur, "", new { @class = "text-danger" })
-                                </div><!--end col-->
-
-                                <div class="col-lg-6">
+                                <div class="col-lg-12">
                                     @Html.LabelFor(model => model.Tags, htmlAttributes: new { @class = "form-label" })
-                                    @Html.EditorFor(model => model.Tags, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                                    @*@Html.EditorFor(model => model.Tags, new { htmlAttributes = new { @class = "form-control", required = "required" } })*@
+                                    <input class="form-control" id="Tags" name="Tags" data-choices data-choices-text-unique-true type="text" />
                                     @Html.ValidationMessageFor(model => model.Tags, "", new { @class = "text-danger" })
                                 </div><!--end col-->
-                                <!--<div class="col-lg-12">
-        @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "form-label" })
-        <div class="avatar-xl mx-auto">-->
-                                @*<input type="file" class="filepond filepond-input-circle" name="filepond" accept="image/png, image/jpeg, image/gif" />*@
-                                <!--@Html.EditorFor(model => model.Image, new { htmlAttributes = new { @type = "file", @class = "filepond filepond-input-circle", @accept = "image/png, image/jpeg, image/gif" } })
-            @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
-        </div>
-    </div>-->
+
+                                <div class="col-lg-6">
+                                    <label for="IdDoss" class="form-label">Catégorie</label>
+                                    <select class="js-example-basic-single" name="IdCateDos" id="IdCateDos">
+                                        <option value="0">- CATEDOSSIER -</option>
+                                        @foreach (var cd in Model.Categories)
+                                        {
+                                            <option value="@cd.IdCatDos">@cd.NomCatDos</option>
+                                        }
+                                    </select>
+                                </div><!--end col-->
+
+                                <div class="col-lg-6">
+                                    <label for="IdDoss" class="form-label">Dossier</label>
+                                    <select class="js-example-basic-single" name="IdDoss" id="IdDoss" required>
+                                        <option value="0">- DOSSIER -</option>
+                                        @foreach (var d in Model.Dossiers)
+                                        {
+                                            <option value="@d.IdDoss">@d.NomDoss</option>
+                                        }
+                                    </select>
+                                    @Html.ValidationMessageFor(model => model.IdDoss, "", new { @class = "text-danger" })
+                                </div><!--end col-->
                                 <!--end col-->
                                 @*@Html.HiddenFor(model => model.IdUploader, "")*@
 
                                 <!--<div class="col-lg-12">
-        <label for="externalLink" class="form-label">External link</label>
-        <input type="text" class="form-control" id="externalLink" placeholder="Enter external link">
-    </div>-->
+                                    <label for="externalLink" class="form-label">External link</label>
+                                    <input type="text" class="form-control" id="externalLink" placeholder="Enter external link">
+                                </div>-->
                                 <!--end col-->
                                 <!--<div class="col-lg-4">
-        <label for="itemPrice" class="form-label">Item Price</label>
-        <input type="text" class="form-control" id="itemPrice" placeholder="Price">
-    </div>-->
+                                    <label for="itemPrice" class="form-label">Item Price</label>
+                                    <input type="text" class="form-control" id="itemPrice" placeholder="Price">
+                                </div>-->
                                 <!--end col-->
                                 <!--<div class="col-lg-4">
-        <label for="size" class="form-label">Size</label>
-        <input type="text" class="form-control" id="size" placeholder="Size">
-    </div>-->
+                                    <label for="size" class="form-label">Size</label>
+                                    <input type="text" class="form-control" id="size" placeholder="Size">
+                                </div>-->
                                 <!--end col-->
                                 <!--<div class="col-lg-4">
-        <label for="properties" class="form-label">Properties</label>
-        <input type="text" class="form-control" id="properties" placeholder="Properties">
-    </div>-->
+                                    <label for="properties" class="form-label">Properties</label>
+                                    <input type="text" class="form-control" id="properties" placeholder="Properties">
+                                </div>-->
                                 <!--end col-->
                                 <!--<div class="col-lg-12">
-        <div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                <label class="form-check-label" for="inlineCheckbox1">Put on sale</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                <label class="form-check-label" for="inlineCheckbox2">Instant sale price</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                <label class="form-check-label" for="inlineCheckbox3">Unlock one purchased</label>
-            </div>
-        </div>
-    </div>-->
+                                    <div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                                            <label class="form-check-label" for="inlineCheckbox1">Put on sale</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                                            <label class="form-check-label" for="inlineCheckbox2">Instant sale price</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                                            <label class="form-check-label" for="inlineCheckbox3">Unlock one purchased</label>
+                                        </div>
+                                    </div>
+                                </div>-->
                                 <!--end col-->
                                 @*<div class="col-lg-12">
-                                    <div class="text-start">
-                                        <a href="@Url.Action("Index")" class="btn btn-light btn-label ms-auto">
-                                            <i class="ri-arrow-left-line label-icon align-middle fs-16 me-2"></i>
-                                            Retour à la liste
-                                        </a>
-                                    </div>
-                                    <div class="text-end">
-                                        <button type="submit" class="btn btn-primary btn-label right ms-auto">
-                                            <i class="ri-save-line label-icon align-middle fs-16 ms-2"></i>
-                                            Sauvegarder
-                                        </button>
-                                    </div>
-                                </div>*@
+                                        <div class="text-start">
+                                            <a href="@Url.Action("Index")" class="btn btn-light btn-label ms-auto">
+                                                <i class="ri-arrow-left-line label-icon align-middle fs-16 me-2"></i>
+                                                Retour à la liste
+                                            </a>
+                                        </div>
+                                        <div class="text-end">
+                                            <button type="submit" class="btn btn-primary btn-label right ms-auto">
+                                                <i class="ri-save-line label-icon align-middle fs-16 ms-2"></i>
+                                                Sauvegarder
+                                            </button>
+                                        </div>
+                                    </div>*@
                                 <div class="mt-4 clearfix">
                                     <a href="@Url.Action("Index")" class="btn btn-light btn-label left ms-auto float-start">
                                         <i class="ri-arrow-left-line label-icon align-middle fs-16 me-2"></i>
@@ -216,30 +220,41 @@
             }
 
             @*<div>
-                @Html.ActionLink("Back to List", "Index")
-            </div>*@
+                    @Html.ActionLink("Back to List", "Index")
+                </div>*@
         </div>
     </div>
 </div>
 
 @section Scripts {
+    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
     <!-- filepond js -->
-    <script src="~/Content/Layouts/Velzon/libs/filepond/filepond.min.js"></script>
+    <!--<script src="~/Content/Layouts/Velzon/libs/filepond/filepond.min.js"></script>
     <script src="~/Content/Layouts/Velzon/libs/filepond-plugin-image-preview/filepond-plugin-image-preview.min.js"></script>
     <script src="~/Content/Layouts/Velzon/libs/filepond-plugin-file-validate-size/filepond-plugin-file-validate-size.min.js"></script>
     <script src="~/Content/Layouts/Velzon/libs/filepond-plugin-image-exif-orientation/filepond-plugin-image-exif-orientation.min.js"></script>
-    <script src="~/Content/Layouts/Velzon/libs/filepond-plugin-file-encode/filepond-plugin-file-encode.min.js"></script>
+    <script src="~/Content/Layouts/Velzon/libs/filepond-plugin-file-encode/filepond-plugin-file-encode.min.js"></script>-->
     <!-- dropzone js -->
-    <script src="~/Content/Layouts/Velzon/libs/dropzone/dropzone-min.js"></script>
+    <!--<script src="~/Content/Layouts/Velzon/libs/dropzone/dropzone-min.js"></script>-->
     <!-- project-create init -->
-    <script src="~/Content/Layouts/Velzon/js/pages/project-create.init.js"></script>
+    @*<script src="~/Content/Layouts/Velzon/js/pages/project-create.init.js"></script>*@
+
+    <!-- init js -->
+    @*<script src="~/content/layouts/velzon/js/pages/form-advanced.init.js"></script>*@
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="~/Content/Layouts/Velzon/js/pages/select2.init.js"></script>
+
+    <script src="~/Scripts/add-doc.js"></script>
 }
+
 
 @section Stylesheets {
     <!-- dropzone css -->
-    <link rel="stylesheet" href="~/Content/Layouts/Velzon/libs/dropzone/dropzone.css" type="text/css" />
-    <!-- Filepond css -->
-    <link rel="stylesheet" href="~/Content/Layouts/Velzon/libs/filepond/filepond.min.css" type="text/css" />
-    <link rel="stylesheet" href="~/Content/Layouts/Velzon/libs/filepond-plugin-image-preview/filepond-plugin-image-preview.min.css">
+    @*<link rel="stylesheet" href="~/Content/Layouts/Velzon/libs/dropzone/dropzone.css" type="text/css" />
+         Filepond css
+        <link rel="stylesheet" href="~/Content/Layouts/Velzon/libs/filepond/filepond.min.css" type="text/css" />
+        <link rel="stylesheet" href="~/Content/Layouts/Velzon/libs/filepond-plugin-image-preview/filepond-plugin-image-preview.min.css">*@
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 }
+
