--- a/Views/Document/Index.cshtml
+++ b/Views/Document/Index.cshtml
@@ -46,9 +46,9 @@
                             <th class="sort" data-sort="uploader">
                                 @Html.DisplayNameFor(model => model.Uploader)
                             </th>
-                            <th>
+                            @*<th>
                                 @Html.DisplayNameFor(model => model.NomAuteur)
-                            </th>
+                            </th>*@
                             <th class="sort" data-sort="tags">
                                 @Html.DisplayNameFor(model => model.Tags)
                             </th>
@@ -79,9 +79,9 @@
                                 <td class="uploader">
                                     @Html.DisplayFor(modelItem => item.Uploader)
                                 </td>
-                                <td class="nomauteur">
+                                @*<td class="nomauteur">
                                     @Html.DisplayFor(modelItem => item.NomAuteur)
-                                </td>
+                                </td>*@
                                 <td class="tags">
                                     @Html.DisplayFor(modelItem => item.Tags)
                                 </td>
