--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -635,4 +635,5 @@
     </script>
     <!-- init file -->
     @*<script src="~/Content/Layouts/Velzon/js/pages/file-manager.init.js"></script>*@
+    <script src="~/Scripts/gestionnaire.js"></script>
 }
