--- a/Views/Utiliz/Login.cshtml
+++ b/Views/Utiliz/Login.cshtml
@@ -48,6 +48,8 @@
 
         <!-- auth page content -->
         <div class="auth-page-content">
+            @*Alert ViewBag Message*@
+
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -92,21 +94,18 @@
                                             </div>
                                             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "form-label" })
                                             @*<label class="form-label" for="password-input">Password</label>*@
-                                        <div class="position-relative auth-pass-inputgroup mb-3">
-                                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Enter password"} })
-                                            @*<input type="password" class="form-control pe-5 password-input" placeholder="Enter password" id="password-input">*@
-                                            <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted shadow-none password-addon" type="button" id="password-addon"><i class="ri-eye-fill align-middle"></i></button>
-                                        </div>
-                                        </div>
+                                            <div class="position-relative auth-pass-inputgroup mb-3">
+                                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @type = "password", @class = "form-control password-input", @placeholder = "Enter password"} })
+                                                @*<input type="password" class="form-control pe-5 password-input" placeholder="Enter password" id="password-input">*@
+                                                <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted shadow-none password-addon" type="button" id="password-addon"><i class="ri-eye-fill align-middle"></i></button>
+                                            </div>
 
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" id="auth-remember-check">
-                                            <label class="form-check-label" for="auth-remember-check">Remember me</label>
+
                                         </div>
 
                                         <div class="mt-4">
                                             @*<button class="btn btn-success w-100" type="submit">Sign In</button>*@
-                                            <input type="submit" value="Create" class="btn btn-default btn btn-success w-100" />
+                                            <input type="submit" value="Se connecter" class="btn btn-default btn btn-success w-100" />
                                         </div>
                                     }
                                 </div>
@@ -114,9 +113,6 @@
                             <!-- end card body -->
                         </div>
                         <!-- end card -->
-                        @*<div class="mt-4 text-center">
-                                <p class="mb-0">Don't have an account ? <a href="auth-signup-basic.html" class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>
-                            </div>*@
 
                     </div>
                 </div>
