gestionnaire physical functions 1

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -500,7 +500,7 @@
 
                     <div class="mt-auto border-top border-top-dashed py-3">
                         <div class="hstack gap-2">
-                            <button type="button" class="btn btn-soft-primary w-100"><i class="ri-download-2-line align-bottom me-1"></i> Download</button>
+                            <button type="button" class="btn btn-soft-primary w-100 download-file-overview" data-download-id=""><i class="ri-download-2-line align-bottom me-1"></i> Download</button>
                             <button type="button" class="btn btn-soft-danger w-100 remove-file-overview" data-remove-id="" data-bs-toggle="modal" data-bs-target="#removeFileItemModal"><i class="ri-close-fill align-bottom me-1"></i> Delete</button>
                         </div>
                     </div>
